kubernetes/deployments/components/generics/templates/microservices/namespace-frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  namespace: frontend
  labels:
    name: frontend
