kubernetes/deployments/components/generics/templates/microservices/gateway-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: gateway
  namespace: frontend
spec:
  selector:   
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
      - name: "gateway"
        image: docker.io/fabrizio294/gateway:0.0.4
        ports:
        - containerPort: 7080
