kubernetes/deployments/components/generics/templates/microservices/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: frontend
spec:
  selector:
    app: gateway
  type: NodePort
  ports:
  - name: netty-http
    port: 7080
    targetPort: 7080
    nodePort: 30080
