kubernetes/deployments/components/generics/templates/microservices/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service
  namespace: frontend
spec:
  selector:
    app: rest
  type: ClusterIP
  ports:
  - name: tomcat-http
    port: 8080
    targetPort: 8080
