kubernetes/deployments/components/generics/templates/microservices/socket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket-service
  namespace: frontend
spec:
  selector:
    app: socket
  type: ClusterIP
  ports:
  - name: tomcat-http
    port: 8080
    targetPort: 8080
