kubernetes/deployments/components/generics/templates/microservices/ui-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: ui
  namespace: frontend
spec:
  selector:   
    matchLabels:
      app: ui
  replicas: 1
  template:
    metadata:
      labels:
        app: ui
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
      - name: ui
        image: docker.io/fabrizio294/ui:0.1.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: frontend
spec:
  selector:
    app: ui
  type: ClusterIP
  ports:
  - name: http 
    port: 8080
    targetPort: 8080
