kubernetes/deployments/components/generics/templates/microservices/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  namespace: frontend
spec:
  rules:
    - host: iot-handler
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service    
                port:
                  number: 30080
